Added multilanguage support

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "formidable": "^1.0.17",
+    "i18n-2": "^0.4.6",
+    "mongoose": "^4.1.9",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
