--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "DEBUG=nodepop:* PORT=3000 SPORT=4443 NODE_PATH=lib ENV=development nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -15,6 +16,7 @@
     "formidable": "^1.0.17",
     "i18n-2": "^0.4.6",
     "mongoose": "^4.1.9",
+    "mongoose-types": "^1.0.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
