--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "formidable": "^1.0.17",
     "i18n-2": "^0.4.6",
+    "jsonwebtoken": "^5.4.0",
     "mongoose": "^4.1.9",
     "mongoose-types": "^1.0.3",
     "morgan": "~1.6.1",
