--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "scripts": {
     "start": "PORT=80 SPORT=443 NODE_PATH=lib ENV=production node ./bin/www",
     "dev": "DEBUG=nodepop:* PORT=3000 SPORT=4443 NODE_PATH=lib ENV=development nodemon ./bin/www",
-    "dummy": "NODE_PATH=lib node ./bin/dummyData.js"
+    "installDB": "NODE_PATH=lib node ./bin/installDB.js"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "deasync": "^0.1.2",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "formidable": "^1.0.17",
     "i18n-2": "^0.4.6",
     "jsonwebtoken": "^5.4.0",
+    "mime-types": "^2.1.7",
     "mongoose": "^4.1.9",
     "mongoose-types": "^1.0.3",
     "morgan": "~1.6.1",
     "multer": "^1.0.6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sprintf": "^0.1.5"
   },
   "description": "An api for wallapop clone as exercise for node module.",
   "main": "app.js",
