--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-types": "^1.0.3",
     "morgan": "~1.6.1",
     "multer": "^1.0.6",
+    "randomid": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "sprintf": "^0.1.5"
   },
